Gitforscratch/main/default/objects/Retonlyobj__c/Retonlyobj__c.object-meta.xml
<CustomObject>
    <label>Retonlyobj</label>
    <nameField>
        <label>Retonlyobj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retonlyobjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>