Gitforscratch/main/default/objects/Retonlyobj__c/fields/checkperm__c.field-meta.xml
<CustomField>
    <fullName>checkperm__c</fullName>
    <label>checkperm</label>
    <length>18</length>
    <type>Text</type>
</CustomField>