Gitforscratch/main/default/objects/Retonlyobj__c/fields/checkvs__c.field-meta.xml
<CustomField>
    <fullName>checkvs__c</fullName>
    <label>checkvs</label>
    <length>18</length>
    <type>Text</type>
</CustomField>