Gitforscratch/main/default/objects/Retonlyobj__c/fields/dev1__c.field-meta.xml
<CustomField>
    <fullName>dev1__c</fullName>
    <label>dev1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>